runtime/gen/basis-ffi.h

extern const C_TCFlag_t Posix_TTY_C_CS7;
extern const C_TCFlag_t Posix_TTY_C_CS8;
extern const C_TCFlag_t Posix_TTY_C_CSIZE;
extern const C_TCFlag_t Posix_TTY_C_CSTOPB;
extern const C_TCFlag_t Posix_TTY_C_HUPCL;
extern const C_TCFlag_t Posix_TTY_C_PARENB;
extern const C_TCFlag_t Posix_TTY_C_PARODD;
extern const C_TCFlag_t Posix_TTY_I_BRKINT;
extern const C_TCFlag_t Posix_TTY_I_ICRNL;
extern const C_TCFlag_t Posix_TTY_I_IGNBRK;
extern const C_TCFlag_t Posix_TTY_I_IGNCR;
extern const C_TCFlag_t Posix_TTY_I_IGNPAR;
extern const C_TCFlag_t Posix_TTY_I_INLCR;
extern const C_TCFlag_t Posix_TTY_I_INPCK;
extern const C_TCFlag_t Posix_TTY_I_ISTRIP;
extern const C_TCFlag_t Posix_TTY_I_IXANY;
extern const C_TCFlag_t Posix_TTY_I_IXOFF;
extern const C_TCFlag_t Posix_TTY_I_IXON;
extern const C_TCFlag_t Posix_TTY_I_PARMRK;
extern const C_TCFlag_t Posix_TTY_L_ECHO;
extern const C_TCFlag_t Posix_TTY_L_ECHOE;
extern const C_TCFlag_t Posix_TTY_L_ECHOK;
extern const C_TCFlag_t Posix_TTY_L_ECHONL;
extern const C_TCFlag_t Posix_TTY_L_ICANON;
extern const C_TCFlag_t Posix_TTY_L_IEXTEN;
extern const C_TCFlag_t Posix_TTY_L_ISIG;
extern const C_TCFlag_t Posix_TTY_L_NOFLSH;
extern const C_TCFlag_t Posix_TTY_L_TOSTOP;
extern const C_TCFlag_t Posix_TTY_O_BS0;
extern const C_TCFlag_t Posix_TTY_O_BS1;
extern const C_TCFlag_t Posix_TTY_O_BSDLY;
extern const C_TCFlag_t Posix_TTY_O_CR0;
extern const C_TCFlag_t Posix_TTY_O_CR1;
extern const C_TCFlag_t Posix_TTY_O_CR2;
extern const C_TCFlag_t Posix_TTY_O_CR3;
extern const C_TCFlag_t Posix_TTY_O_CRDLY;
extern const C_TCFlag_t Posix_TTY_O_FF0;
extern const C_TCFlag_t Posix_TTY_O_FF1;
extern const C_TCFlag_t Posix_TTY_O_FFDLY;
extern const C_TCFlag_t Posix_TTY_O_NL0;
extern const C_TCFlag_t Posix_TTY_O_NL1;
extern const C_TCFlag_t Posix_TTY_O_NLDLY;
extern const C_TCFlag_t Posix_TTY_O_OCRNL;
extern const C_TCFlag_t Posix_TTY_O_OFILL;
extern const C_TCFlag_t Posix_TTY_O_ONLCR;
extern const C_TCFlag_t Posix_TTY_O_ONLRET;
extern const C_TCFlag_t Posix_TTY_O_ONOCR;
extern const C_TCFlag_t Posix_TTY_O_OPOST;
extern const C_TCFlag_t Posix_TTY_O_TAB0;
extern const C_TCFlag_t Posix_TTY_O_TAB1;
extern const C_TCFlag_t Posix_TTY_O_TAB2;
extern const C_TCFlag_t Posix_TTY_O_TAB3;
extern const C_TCFlag_t Posix_TTY_O_TABDLY;
extern const C_TCFlag_t Posix_TTY_O_VT0;
extern const C_TCFlag_t Posix_TTY_O_VT1;
extern const C_TCFlag_t Posix_TTY_O_VTDLY;
C_Errno_t(C_Int_t) Posix_TTY_TC_drain(C_Fd_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_flow(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_flush(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_getattr(C_Fd_t);
C_Errno_t(C_PId_t) Posix_TTY_TC_getpgrp(C_Fd_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_sendbreak(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_setattr(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_setpgrp(C_Fd_t,C_PId_t);
extern const C_Int_t Posix_TTY_TC_TCIFLUSH;
extern const C_Int_t Posix_TTY_TC_TCIOFF;
extern const C_Int_t Posix_TTY_TC_TCIOFLUSH;
extern const C_Int_t Posix_TTY_TC_TCION;
extern const C_Int_t Posix_TTY_TC_TCOFLUSH;
extern const C_Int_t Posix_TTY_TC_TCOOFF;
extern const C_Int_t Posix_TTY_TC_TCOON;
extern const C_Int_t Posix_TTY_TC_TCSADRAIN;
extern const C_Int_t Posix_TTY_TC_TCSAFLUSH;
extern const C_Int_t Posix_TTY_TC_TCSANOW;
C_Speed_t Posix_TTY_Termios_cfGetISpeed(void);
C_Speed_t Posix_TTY_Termios_cfGetOSpeed(void);
C_Errno_t(C_Int_t) Posix_TTY_Termios_cfSetISpeed(C_Speed_t);
C_Errno_t(C_Int_t) Posix_TTY_Termios_cfSetOSpeed(C_Speed_t);
void Posix_TTY_Termios_getCC(Array(C_CC_t));
C_TCFlag_t Posix_TTY_Termios_getCFlag(void);
C_TCFlag_t Posix_TTY_Termios_getIFlag(void);
C_TCFlag_t Posix_TTY_Termios_getLFlag(void);
C_TCFlag_t Posix_TTY_Termios_getOFlag(void);
void Posix_TTY_Termios_setCC(Array(C_CC_t));
void Posix_TTY_Termios_setCFlag(C_TCFlag_t);
void Posix_TTY_Termios_setIFlag(C_TCFlag_t);
void Posix_TTY_Termios_setLFlag(C_TCFlag_t);
void Posix_TTY_Termios_setOFlag(C_TCFlag_t);
extern const C_Int_t Posix_TTY_V_NCCS;
extern const C_Int_t Posix_TTY_V_VEOF;
extern const C_Int_t Posix_TTY_V_VEOL;
extern const C_Int_t Posix_TTY_V_VERASE;
extern const C_Int_t Posix_TTY_V_VINTR;
extern const C_Int_t Posix_TTY_V_VKILL;
extern const C_Int_t Posix_TTY_V_VMIN;
extern const C_Int_t Posix_TTY_V_VQUIT;
extern const C_Int_t Posix_TTY_V_VSTART;
extern const C_Int_t Posix_TTY_V_VSTOP;
extern const C_Int_t Posix_TTY_V_VSUSP;
extern const C_Int_t Posix_TTY_V_VTIME;
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_abs(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_add(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_div(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real32_equal(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_fetch(Ref(Real32_t));
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_frexp(Real32_t,Ref(C_Int_t));
C_String_t Real32_gdtoa(Real32_t,C_Int_t,C_Int_t,Ref(C_Int_t));
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_ldexp(Real32_t,C_Int_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real32_le(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real32_lt(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_acos(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_asin(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_atan(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_atan2(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_cos(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_cosh(Real32_t);
extern Real32_t Real32_Math_e;
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_exp(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_ln(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_log10(Real32_t);
extern Real32_t Real32_Math_pi;
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_pow(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_sin(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_sinh(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_sqrt(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_tan(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_Math_tanh(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_modf(Real32_t,Ref(Real32_t));
MLTON_CODEGEN_STATIC_INLINE void Real32_move(Ref(Real32_t),Ref(Real32_t));
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_mul(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_muladd(Real32_t,Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_mulsub(Real32_t,Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_neg(Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_round(Real32_t);
MLTON_CODEGEN_STATIC_INLINE void Real32_store(Ref(Real32_t),Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real32_t Real32_sub(Real32_t,Real32_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_abs(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_add(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_div(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real64_equal(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_fetch(Ref(Real64_t));
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_frexp(Real64_t,Ref(C_Int_t));
C_String_t Real64_gdtoa(Real64_t,C_Int_t,C_Int_t,Ref(C_Int_t));
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_ldexp(Real64_t,C_Int_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real64_le(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Bool_t Real64_lt(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_acos(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_asin(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_atan(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_atan2(Real64_t,Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_cos(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_cosh(Real64_t);
extern Real64_t Real64_Math_e;
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_exp(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_ln(Real64_t);
MLTON_CODEGEN_STATIC_INLINE Real64_t Real64_Math_log10(Real64_t);
extern Real64_t Real64_Math_pi;