runtime/gen/basis-ffi.sml

val CS7 = _const "Posix_TTY_C_CS7" : C_TCFlag.t;
val CS8 = _const "Posix_TTY_C_CS8" : C_TCFlag.t;
val CSIZE = _const "Posix_TTY_C_CSIZE" : C_TCFlag.t;
val CSTOPB = _const "Posix_TTY_C_CSTOPB" : C_TCFlag.t;
val HUPCL = _const "Posix_TTY_C_HUPCL" : C_TCFlag.t;
val PARENB = _const "Posix_TTY_C_PARENB" : C_TCFlag.t;
val PARODD = _const "Posix_TTY_C_PARODD" : C_TCFlag.t;
end
structure I = 
struct
val BRKINT = _const "Posix_TTY_I_BRKINT" : C_TCFlag.t;
val ICRNL = _const "Posix_TTY_I_ICRNL" : C_TCFlag.t;
val IGNBRK = _const "Posix_TTY_I_IGNBRK" : C_TCFlag.t;
val IGNCR = _const "Posix_TTY_I_IGNCR" : C_TCFlag.t;
val IGNPAR = _const "Posix_TTY_I_IGNPAR" : C_TCFlag.t;
val INLCR = _const "Posix_TTY_I_INLCR" : C_TCFlag.t;
val INPCK = _const "Posix_TTY_I_INPCK" : C_TCFlag.t;
val ISTRIP = _const "Posix_TTY_I_ISTRIP" : C_TCFlag.t;
val IXANY = _const "Posix_TTY_I_IXANY" : C_TCFlag.t;
val IXOFF = _const "Posix_TTY_I_IXOFF" : C_TCFlag.t;
val IXON = _const "Posix_TTY_I_IXON" : C_TCFlag.t;
val PARMRK = _const "Posix_TTY_I_PARMRK" : C_TCFlag.t;
end
structure L = 
struct
val ECHO = _const "Posix_TTY_L_ECHO" : C_TCFlag.t;
val ECHOE = _const "Posix_TTY_L_ECHOE" : C_TCFlag.t;
val ECHOK = _const "Posix_TTY_L_ECHOK" : C_TCFlag.t;
val ECHONL = _const "Posix_TTY_L_ECHONL" : C_TCFlag.t;
val ICANON = _const "Posix_TTY_L_ICANON" : C_TCFlag.t;
val IEXTEN = _const "Posix_TTY_L_IEXTEN" : C_TCFlag.t;
val ISIG = _const "Posix_TTY_L_ISIG" : C_TCFlag.t;
val NOFLSH = _const "Posix_TTY_L_NOFLSH" : C_TCFlag.t;
val TOSTOP = _const "Posix_TTY_L_TOSTOP" : C_TCFlag.t;
end
structure O = 
struct
val BS0 = _const "Posix_TTY_O_BS0" : C_TCFlag.t;
val BS1 = _const "Posix_TTY_O_BS1" : C_TCFlag.t;
val BSDLY = _const "Posix_TTY_O_BSDLY" : C_TCFlag.t;
val CR0 = _const "Posix_TTY_O_CR0" : C_TCFlag.t;
val CR1 = _const "Posix_TTY_O_CR1" : C_TCFlag.t;
val CR2 = _const "Posix_TTY_O_CR2" : C_TCFlag.t;
val CR3 = _const "Posix_TTY_O_CR3" : C_TCFlag.t;
val CRDLY = _const "Posix_TTY_O_CRDLY" : C_TCFlag.t;
val FF0 = _const "Posix_TTY_O_FF0" : C_TCFlag.t;
val FF1 = _const "Posix_TTY_O_FF1" : C_TCFlag.t;
val FFDLY = _const "Posix_TTY_O_FFDLY" : C_TCFlag.t;
val NL0 = _const "Posix_TTY_O_NL0" : C_TCFlag.t;
val NL1 = _const "Posix_TTY_O_NL1" : C_TCFlag.t;
val NLDLY = _const "Posix_TTY_O_NLDLY" : C_TCFlag.t;
val OCRNL = _const "Posix_TTY_O_OCRNL" : C_TCFlag.t;
val OFILL = _const "Posix_TTY_O_OFILL" : C_TCFlag.t;
val ONLCR = _const "Posix_TTY_O_ONLCR" : C_TCFlag.t;
val ONLRET = _const "Posix_TTY_O_ONLRET" : C_TCFlag.t;
val ONOCR = _const "Posix_TTY_O_ONOCR" : C_TCFlag.t;
val OPOST = _const "Posix_TTY_O_OPOST" : C_TCFlag.t;
val TAB0 = _const "Posix_TTY_O_TAB0" : C_TCFlag.t;
val TAB1 = _const "Posix_TTY_O_TAB1" : C_TCFlag.t;
val TAB2 = _const "Posix_TTY_O_TAB2" : C_TCFlag.t;
val TAB3 = _const "Posix_TTY_O_TAB3" : C_TCFlag.t;
val TABDLY = _const "Posix_TTY_O_TABDLY" : C_TCFlag.t;
val VT0 = _const "Posix_TTY_O_VT0" : C_TCFlag.t;
val VT1 = _const "Posix_TTY_O_VT1" : C_TCFlag.t;
val VTDLY = _const "Posix_TTY_O_VTDLY" : C_TCFlag.t;
end
structure TC = 
struct
val drain = _import "Posix_TTY_TC_drain" private : C_Fd.t -> (C_Int.t) C_Errno.t;
val flow = _import "Posix_TTY_TC_flow" private : C_Fd.t * C_Int.t -> (C_Int.t) C_Errno.t;
val flush = _import "Posix_TTY_TC_flush" private : C_Fd.t * C_Int.t -> (C_Int.t) C_Errno.t;
val getattr = _import "Posix_TTY_TC_getattr" private : C_Fd.t -> (C_Int.t) C_Errno.t;
val getpgrp = _import "Posix_TTY_TC_getpgrp" private : C_Fd.t -> (C_PId.t) C_Errno.t;
val sendbreak = _import "Posix_TTY_TC_sendbreak" private : C_Fd.t * C_Int.t -> (C_Int.t) C_Errno.t;
val setattr = _import "Posix_TTY_TC_setattr" private : C_Fd.t * C_Int.t -> (C_Int.t) C_Errno.t;
val setpgrp = _import "Posix_TTY_TC_setpgrp" private : C_Fd.t * C_PId.t -> (C_Int.t) C_Errno.t;
val TCIFLUSH = _const "Posix_TTY_TC_TCIFLUSH" : C_Int.t;
val TCIOFF = _const "Posix_TTY_TC_TCIOFF" : C_Int.t;
val TCIOFLUSH = _const "Posix_TTY_TC_TCIOFLUSH" : C_Int.t;
val TCION = _const "Posix_TTY_TC_TCION" : C_Int.t;
val TCOFLUSH = _const "Posix_TTY_TC_TCOFLUSH" : C_Int.t;
val TCOOFF = _const "Posix_TTY_TC_TCOOFF" : C_Int.t;
val TCOON = _const "Posix_TTY_TC_TCOON" : C_Int.t;
val TCSADRAIN = _const "Posix_TTY_TC_TCSADRAIN" : C_Int.t;
val TCSAFLUSH = _const "Posix_TTY_TC_TCSAFLUSH" : C_Int.t;
val TCSANOW = _const "Posix_TTY_TC_TCSANOW" : C_Int.t;
end
structure Termios = 
struct
val cfGetISpeed = _import "Posix_TTY_Termios_cfGetISpeed" private : unit -> C_Speed.t;
val cfGetOSpeed = _import "Posix_TTY_Termios_cfGetOSpeed" private : unit -> C_Speed.t;
val cfSetISpeed = _import "Posix_TTY_Termios_cfSetISpeed" private : C_Speed.t -> (C_Int.t) C_Errno.t;
val cfSetOSpeed = _import "Posix_TTY_Termios_cfSetOSpeed" private : C_Speed.t -> (C_Int.t) C_Errno.t;
val getCC = _import "Posix_TTY_Termios_getCC" private : (C_CC.t) array -> unit;
val getCFlag = _import "Posix_TTY_Termios_getCFlag" private : unit -> C_TCFlag.t;
val getIFlag = _import "Posix_TTY_Termios_getIFlag" private : unit -> C_TCFlag.t;
val getLFlag = _import "Posix_TTY_Termios_getLFlag" private : unit -> C_TCFlag.t;
val getOFlag = _import "Posix_TTY_Termios_getOFlag" private : unit -> C_TCFlag.t;
val setCC = _import "Posix_TTY_Termios_setCC" private : (C_CC.t) array -> unit;
val setCFlag = _import "Posix_TTY_Termios_setCFlag" private : C_TCFlag.t -> unit;
val setIFlag = _import "Posix_TTY_Termios_setIFlag" private : C_TCFlag.t -> unit;
val setLFlag = _import "Posix_TTY_Termios_setLFlag" private : C_TCFlag.t -> unit;
val setOFlag = _import "Posix_TTY_Termios_setOFlag" private : C_TCFlag.t -> unit;
end
structure V = 
struct
val NCCS = _const "Posix_TTY_V_NCCS" : C_Int.t;
val VEOF = _const "Posix_TTY_V_VEOF" : C_Int.t;
val VEOL = _const "Posix_TTY_V_VEOL" : C_Int.t;
val VERASE = _const "Posix_TTY_V_VERASE" : C_Int.t;
val VINTR = _const "Posix_TTY_V_VINTR" : C_Int.t;
val VKILL = _const "Posix_TTY_V_VKILL" : C_Int.t;
val VMIN = _const "Posix_TTY_V_VMIN" : C_Int.t;
val VQUIT = _const "Posix_TTY_V_VQUIT" : C_Int.t;
val VSTART = _const "Posix_TTY_V_VSTART" : C_Int.t;
val VSTOP = _const "Posix_TTY_V_VSTOP" : C_Int.t;
val VSUSP = _const "Posix_TTY_V_VSUSP" : C_Int.t;
val VTIME = _const "Posix_TTY_V_VTIME" : C_Int.t;
end
end
end
structure Real32 = 
struct
type t = Real32.t
val abs = _import "Real32_abs" private : Real32.t -> Real32.t;
val add = _import "Real32_add" private : Real32.t * Real32.t -> Real32.t;
val castToWord32 = _import "Real32_castToWord32" private : Real32.t -> Word32.t;
val div = _import "Real32_div" private : Real32.t * Real32.t -> Real32.t;
val equal = _import "Real32_equal" private : Real32.t * Real32.t -> Bool.t;
val fetch = _import "Real32_fetch" private : (Real32.t) ref -> Real32.t;
val frexp = _import "Real32_frexp" private : Real32.t * (C_Int.t) ref -> Real32.t;
val gdtoa = _import "Real32_gdtoa" private : Real32.t * C_Int.t * C_Int.t * C_Int.t * (C_Int.t) ref -> C_String.t;
val ldexp = _import "Real32_ldexp" private : Real32.t * C_Int.t -> Real32.t;
val le = _import "Real32_le" private : Real32.t * Real32.t -> Bool.t;
val lt = _import "Real32_lt" private : Real32.t * Real32.t -> Bool.t;
structure Math = 
struct
val acos = _import "Real32_Math_acos" private : Real32.t -> Real32.t;
val asin = _import "Real32_Math_asin" private : Real32.t -> Real32.t;
val atan = _import "Real32_Math_atan" private : Real32.t -> Real32.t;
val atan2 = _import "Real32_Math_atan2" private : Real32.t * Real32.t -> Real32.t;
val cos = _import "Real32_Math_cos" private : Real32.t -> Real32.t;
val cosh = _import "Real32_Math_cosh" private : Real32.t -> Real32.t;
val (eGet, eSet) = _symbol "Real32_Math_e" private : (unit -> (Real32.t)) * ((Real32.t) -> unit);
val exp = _import "Real32_Math_exp" private : Real32.t -> Real32.t;
val ln = _import "Real32_Math_ln" private : Real32.t -> Real32.t;
val log10 = _import "Real32_Math_log10" private : Real32.t -> Real32.t;
val (piGet, piSet) = _symbol "Real32_Math_pi" private : (unit -> (Real32.t)) * ((Real32.t) -> unit);
val pow = _import "Real32_Math_pow" private : Real32.t * Real32.t -> Real32.t;
val sin = _import "Real32_Math_sin" private : Real32.t -> Real32.t;
val sinh = _import "Real32_Math_sinh" private : Real32.t -> Real32.t;
val sqrt = _import "Real32_Math_sqrt" private : Real32.t -> Real32.t;
val tan = _import "Real32_Math_tan" private : Real32.t -> Real32.t;
val tanh = _import "Real32_Math_tanh" private : Real32.t -> Real32.t;
end
val modf = _import "Real32_modf" private : Real32.t * (Real32.t) ref -> Real32.t;
val move = _import "Real32_move" private : (Real32.t) ref * (Real32.t) ref -> unit;
val mul = _import "Real32_mul" private : Real32.t * Real32.t -> Real32.t;
val muladd = _import "Real32_muladd" private : Real32.t * Real32.t * Real32.t -> Real32.t;
val mulsub = _import "Real32_mulsub" private : Real32.t * Real32.t * Real32.t -> Real32.t;
val neg = _import "Real32_neg" private : Real32.t -> Real32.t;
val realCeil = _import "Real32_realCeil" private : Real32.t -> Real32.t;
val realFloor = _import "Real32_realFloor" private : Real32.t -> Real32.t;
val realTrunc = _import "Real32_realTrunc" private : Real32.t -> Real32.t;
val rndToReal32 = _import "Real32_rndToReal32" private : Real32.t -> Real32.t;
val rndToReal64 = _import "Real32_rndToReal64" private : Real32.t -> Real64.t;
val rndToWordS16 = _import "Real32_rndToWordS16" private : Real32.t -> Int16.t;
val rndToWordS32 = _import "Real32_rndToWordS32" private : Real32.t -> Int32.t;
val rndToWordS64 = _import "Real32_rndToWordS64" private : Real32.t -> Int64.t;
val rndToWordS8 = _import "Real32_rndToWordS8" private : Real32.t -> Int8.t;
val rndToWordU16 = _import "Real32_rndToWordU16" private : Real32.t -> Word16.t;
val rndToWordU32 = _import "Real32_rndToWordU32" private : Real32.t -> Word32.t;
val rndToWordU64 = _import "Real32_rndToWordU64" private : Real32.t -> Word64.t;
val rndToWordU8 = _import "Real32_rndToWordU8" private : Real32.t -> Word8.t;
val round = _import "Real32_round" private : Real32.t -> Real32.t;
val store = _import "Real32_store" private : (Real32.t) ref * Real32.t -> unit;
val strtor = _import "Real32_strtor" private : NullString8.t * C_Int.t -> Real32.t;
val sub = _import "Real32_sub" private : Real32.t * Real32.t -> Real32.t;
end
structure Real64 = 
struct
type t = Real64.t
val abs = _import "Real64_abs" private : Real64.t -> Real64.t;
val add = _import "Real64_add" private : Real64.t * Real64.t -> Real64.t;
val castToWord64 = _import "Real64_castToWord64" private : Real64.t -> Word64.t;
val div = _import "Real64_div" private : Real64.t * Real64.t -> Real64.t;
val equal = _import "Real64_equal" private : Real64.t * Real64.t -> Bool.t;
val fetch = _import "Real64_fetch" private : (Real64.t) ref -> Real64.t;
val frexp = _import "Real64_frexp" private : Real64.t * (C_Int.t) ref -> Real64.t;
val gdtoa = _import "Real64_gdtoa" private : Real64.t * C_Int.t * C_Int.t * C_Int.t * (C_Int.t) ref -> C_String.t;
val ldexp = _import "Real64_ldexp" private : Real64.t * C_Int.t -> Real64.t;
val le = _import "Real64_le" private : Real64.t * Real64.t -> Bool.t;
val lt = _import "Real64_lt" private : Real64.t * Real64.t -> Bool.t;
structure Math = 
struct
val acos = _import "Real64_Math_acos" private : Real64.t -> Real64.t;
val asin = _import "Real64_Math_asin" private : Real64.t -> Real64.t;
val atan = _import "Real64_Math_atan" private : Real64.t -> Real64.t;
val atan2 = _import "Real64_Math_atan2" private : Real64.t * Real64.t -> Real64.t;
val cos = _import "Real64_Math_cos" private : Real64.t -> Real64.t;
val cosh = _import "Real64_Math_cosh" private : Real64.t -> Real64.t;
val (eGet, eSet) = _symbol "Real64_Math_e" private : (unit -> (Real64.t)) * ((Real64.t) -> unit);
val exp = _import "Real64_Math_exp" private : Real64.t -> Real64.t;
val ln = _import "Real64_Math_ln" private : Real64.t -> Real64.t;
val log10 = _import "Real64_Math_log10" private : Real64.t -> Real64.t;
val (piGet, piSet) = _symbol "Real64_Math_pi" private : (unit -> (Real64.t)) * ((Real64.t) -> unit);
